--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==1.1.1
+Python==3.8
 imutils==0.5.3
 Keras==2.4.0
 opencv-python==4.4.0.46
 Pillow==8.0.1
-tensorflow==2.2.0
+tensorflow==1.15
 scikit-image==0.17.2
